# cowmail

./: README.md  ch.verbuecheln.cowmail.json  meson.build
data/: ch.verbuecheln.cowmail.appdata.xml.in  ch.verbuecheln.cowmail.desktop.in  ch.verbuecheln.cowmail.gschema.xml  meson.build
docs/: cowmail_whitepaper.tex
po/: POTFILES  meson.build
src/: cowmail-contact-row.c  cowmail-contact-row.h  cowmail-contact-window.c  cowmail-contact-window.h  cowmail-contact-window.ui  cowmail-msg-row.c  cowmail-msg-row.h  cowmail-window.c  cowmail-window.h  cowmail-window.ui  cowmail-write-window.c  cowmail-write-window.h  cowmail-write-window.ui  cowmail.gresource.xml  libcowmail.c  libcowmail.h  main.c  meson.build  write-window.c  write-window.h  write-window.ui
